// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`article screen renders expected components and styles in desktop 1`] = `
<div>
  <div
    class="sc-htpNat iybLJI"
  >
    <div
      class="sc-ifAKCX iEHOTz"
    >
      <div
        class="sc-bZQynM sc-gzVnrw bQuIzm"
      >
        <h1
          class="sc-EHOje cygdwO"
          data-testid="widget-title"
        >
          Help
        </h1>
        <button
          aria-label="Minimize"
          class="IconButton-x15t1e-0 sc-htoDjs index__c-btn--icon___1Yl4x hhbqQ Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv lcPfmb"
          data-garden-container-id="keyboardfocus"
          data-garden-container-version="0.2.6"
          data-garden-id="buttons.icon_button"
          data-garden-version="7.0.2"
          tabindex="0"
          type="button"
        >
          <svg
            class="index__c-btn__icon___3V0Rl"
            data-garden-id="buttons.icon"
            data-garden-version="7.0.2"
            data-testid="Icon--dash"
            realfilename="dash-fill.svg"
          />
        </button>
      </div>
    </div>
    <div
      class="sc-dnqmqq LbvIn"
      data-testid="scroll-container-content"
    >
      <div
        class="content "
        data-testid="hc-article"
      >
        <h2
          class="title"
          data-testid="hc-article-title"
        >
          help
        </h2>
        <div
          class="originalArticleButton"
        >
          <a
            aria-label="View original article"
            target="_blank"
            title="View original article"
          >
            <span
              class="container Icon--link-external"
              data-testid="Icon--link-external"
              type="Icon--link-external"
            >
              <svg
                aria-hidden="true"
                realfilename="link-external.svg"
              />
            </span>
          </a>
        </div>
        <div
          class="article"
          data-testid="hc-article-body"
          role="presentation"
        >
          here
        </div>
      </div>
    </div>
    <footer
      class="sc-iwsKbI ikJxeP"
    >
      <div
        class="sc-gZMcBi kZYhVs"
      >
        <a
          class="icon"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
      </div>
    </footer>
  </div>
</div>
`;

exports[`article screen renders expected components and styles in mobile 1`] = `
<div>
  <div
    class="sc-htpNat iybLJI"
  >
    <div
      class="sc-ifAKCX iEHOTz"
    >
      <div
        class="sc-bZQynM sc-gzVnrw bQuIzm"
      >
        <h1
          class="sc-EHOje cygdwO"
          data-testid="widget-title"
        >
          Help
        </h1>
        <button
          aria-label="Minimize"
          class="IconButton-x15t1e-0 sc-htoDjs index__c-btn--icon___1Yl4x hhbqQ Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv lcPfmb"
          data-garden-container-id="keyboardfocus"
          data-garden-container-version="0.2.6"
          data-garden-id="buttons.icon_button"
          data-garden-version="7.0.2"
          tabindex="0"
          type="button"
        >
          <svg
            class="index__c-btn__icon___3V0Rl"
            data-garden-id="buttons.icon"
            data-garden-version="7.0.2"
            data-testid="Icon--dash"
            realfilename="dash-fill.svg"
          />
        </button>
      </div>
    </div>
    <div
      class="sc-dnqmqq LbvIn"
      data-testid="scroll-container-content"
    >
      <div
        class="content contentMobile"
        data-testid="hc-article"
      >
        <h2
          class="title"
          data-testid="hc-article-title"
        >
          help
        </h2>
        <div
          class="originalArticleButton"
        >
          <a
            aria-label="View original article"
            target="_blank"
            title="View original article"
          >
            <span
              class="container Icon--link-external mobile"
              data-testid="Icon--link-external"
              type="Icon--link-external"
            >
              <svg
                aria-hidden="true"
                realfilename="link-external.svg"
              />
            </span>
          </a>
        </div>
        <div
          class="article"
          data-testid="hc-article-body"
          role="presentation"
        >
          here
        </div>
      </div>
    </div>
    <footer
      class="sc-iwsKbI ikJxeP"
    >
      <div
        class="sc-gZMcBi kZYhVs"
      >
        <a
          class="icon"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
      </div>
    </footer>
  </div>
</div>
`;

exports[`conversation screen renders expected components and styles in desktop 1`] = `
<div>
  <div
    class="sc-htpNat iybLJI"
  >
    <div
      class="sc-ifAKCX iEHOTz"
    >
      <div
        class="sc-bZQynM sc-gzVnrw bQuIzm"
      >
        <h1
          class="sc-EHOje cygdwO"
          data-testid="widget-title"
        >
          Answer Bot
        </h1>
        <button
          aria-label="Minimize"
          class="IconButton-x15t1e-0 sc-htoDjs index__c-btn--icon___1Yl4x hhbqQ Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv lcPfmb"
          data-garden-container-id="keyboardfocus"
          data-garden-container-version="0.2.6"
          data-garden-id="buttons.icon_button"
          data-garden-version="7.0.2"
          tabindex="0"
          type="button"
        >
          <svg
            class="index__c-btn__icon___3V0Rl"
            data-garden-id="buttons.icon"
            data-garden-version="7.0.2"
            data-testid="Icon--dash"
            realfilename="dash-fill.svg"
          />
        </button>
      </div>
    </div>
    <div
      class="sc-dnqmqq LbvIn"
      data-testid="scroll-container-content"
    >
      <div
        class="messages"
      />
    </div>
    <footer
      class="footer sc-iwsKbI kKkMjC"
    >
      <div
        class="sc-cSHVUG dgumTJ"
      >
        <div
          class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
        >
          <label
            class="sc-kAzzGY fmYKCX StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
            data-garden-container-id="field"
            data-garden-container-version="1.1.3"
            data-garden-id="forms.text_label"
            data-garden-version="7.0.2"
            for="garden-field-container-0--input"
            id="garden-field-container-0--label"
          >
            Type your question here...
          </label>
          <textarea
            aria-describedby="garden-field-container-0--hint"
            aria-invalid="false"
            aria-labelledby="garden-field-container-0--label"
            class="StyledTextInput-sc-1ezxcjx-0-textarea sc-chPdSV bAtvxP StyledTextarea-p4bofl-0 text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 ffjHNh"
            data-garden-id="forms.textarea"
            data-garden-version="7.0.2"
            data-testid="message-field"
            id="garden-field-container-0--input"
            name="answerBotInputValue"
            placeholder="Type your question here..."
            rows="3"
          />
        </div>
      </div>
      <div
        class="logoDesktop"
      >
        <a
          class="icon"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
      </div>
    </footer>
  </div>
</div>
`;

exports[`conversation screen renders expected components and styles in mobile 1`] = `
<div>
  <div
    class="sc-htpNat iybLJI"
  >
    <div
      class="sc-ifAKCX iEHOTz"
    >
      <div
        class="sc-bZQynM sc-gzVnrw bQuIzm"
      >
        <h1
          class="sc-EHOje cygdwO"
          data-testid="widget-title"
        >
          Answer Bot
        </h1>
        <button
          aria-label="Minimize"
          class="IconButton-x15t1e-0 sc-htoDjs index__c-btn--icon___1Yl4x hhbqQ Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv lcPfmb"
          data-garden-container-id="keyboardfocus"
          data-garden-container-version="0.2.6"
          data-garden-id="buttons.icon_button"
          data-garden-version="7.0.2"
          tabindex="0"
          type="button"
        >
          <svg
            class="index__c-btn__icon___3V0Rl"
            data-garden-id="buttons.icon"
            data-garden-version="7.0.2"
            data-testid="Icon--dash"
            realfilename="dash-fill.svg"
          />
        </button>
      </div>
    </div>
    <div
      class="sc-dnqmqq LbvIn"
      data-testid="scroll-container-content"
    >
      <div
        class="messages"
      />
    </div>
    <footer
      class="footer sc-iwsKbI isfCJk"
    >
      <div
        class="logoMobile"
      >
        <a
          class="icon"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
      </div>
      <div
        class="containerMobile"
      >
        <div
          class="inputContainerMobile"
        >
          <div
            class="sc-cSHVUG dgumTJ"
          >
            <div
              class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
            >
              <label
                class="sc-kAzzGY fmYKCX StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
                data-garden-container-id="field"
                data-garden-container-version="1.1.3"
                data-garden-id="forms.text_label"
                data-garden-version="7.0.2"
                for="garden-field-container-4--input"
                id="garden-field-container-4--label"
              >
                Type your question here...
              </label>
              <textarea
                aria-describedby="garden-field-container-4--hint"
                aria-invalid="false"
                aria-labelledby="garden-field-container-4--label"
                class="StyledTextInput-sc-1ezxcjx-0-textarea sc-chPdSV bAtvxP StyledTextarea-p4bofl-0 text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 ffjHNh"
                data-garden-id="forms.textarea"
                data-garden-version="7.0.2"
                data-testid="message-field"
                id="garden-field-container-4--input"
                name="answerBotInputValue"
                placeholder="Type your question here..."
                rows="1"
              />
            </div>
          </div>
        </div>
        <button
          aria-label="Send"
          class="button iconSendAnswerBotMobile IconButton-x15t1e-0 button iconSendAnswerBotMobile index__c-btn--icon___1Yl4x laoDmX Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--pill___QYWDJ index__c-btn--lg___33IF1 lcPfmb"
          data-garden-container-id="keyboardfocus"
          data-garden-container-version="0.2.6"
          data-garden-id="buttons.icon_button"
          data-garden-version="7.0.2"
          tabindex="0"
          type="button"
        >
          <span
            class="container Icon--sendChat"
            data-testid="Icon--sendChat"
            type="Icon--sendChat"
          >
            <svg
              aria-hidden="true"
              realfilename="widget-icon_sendChat.svg"
            />
          </span>
        </button>
      </div>
    </footer>
  </div>
</div>
`;
